Functioning simple endpionts for /round, /upcoming-rounds, and /stats
